...
    <string name="mijn_historiek">Mijn Historiek</string>
    <string name="stam_historiek">Stam Historiek</string>
    <string name="wachtwoord_dubbelpunt">Wachtwoord:</string>
    <string name="wachtwoord">Wachtwoord</string>
    <string name="email">Email:</string>
    <string name="log_in">Log in</string>
    <string name="registreer_nu">Registreer nu!</string>
    <string name="ardulogo">arduLogo</string>
    <string name="tom_debakker_be">tom@debakker.be</string>
    <string name="er_is_geen_data_om_weer_te_geven">Er is geen data om weer te geven!</string>
    <string name="tom">Tom</string>
    <string name="de_bakker">De Bakker</string>
    <string name="wachtwoord_bevestiging">Wachtwoord bevestiging</string>
    <string name="wachtwoord_bevestiging_dubbelpunt">Wachtwoord bevestiging:</string>
    <string name="registreren">Registreren</string>
    <string name="ik_heb_al_een_account">Ik heb al een account!</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="er_liep_iets_fout_probeer_het_later_opnieuw">Er liep iets fout! Probeer het later opnieuw!</string>
</resources>

